# aozoratex-studio

./: .gitignore  .latexmkrc  .prettierrc.json  HTML → LaTeX 変換対応表.md  Makefile  README.md  Todo.md  aozoratex.py  app.py  colors.html  device-paper-size-map.html  eslint.config.mjs  memo.md  next.config.mjs  package.json  pyproject.toml  requirements.txt  start_server.bat  system-info.html  tailwind.config.ts  tex_log_parser.py  texlive_font_list.py  tsconfig.json  パッケージ一覧.md  フォント選定.md  指示書.md
.claude/: settings.local.json
config/: device_settings.default.ini  global_settings.default.ini  settings.legacy.ini
docs/: README.md
docs/manuals/: 現在の出力カラー・テーマの種類.md  現在の出力サイズ（デバイス）の種類.md  開発者向け説明書.md
docs/technical/: 01_デバイス別_縦書きPDF最適化.md  02_縦書きPDF_視認性・配色設定.md  03_LaTeX組版_変換仕様.md  04_プロジェクト要件_システム仕様.md  05_組版計算_JIS規格.md  06_PDFビューア_ページめくり設定.md  Todo.md  lualatex_fonts.md  組版の計算式.md
html_templates/: index.html
latex_templates/: Colophon.tex  FrontCover.tex  FrontCover_texture1.tex  FrontCover_texture2.tex  FrontCover_texture3.tex  Main_Frame1.tex  Main_Frame2.tex  Main_Frame3.tex  Main_text.tex  Typesetting_info.tex  washi_texture.tex
latex_templates/Main/: main_1.tex  main_2.tex  main_3.tex  main_4.tex  main_5.tex  main_6.tex  main_7.tex
latex_templates/Oku/: okuduke.tex
latex_templates/Top/: top-Color-1.tex  top-Color-2.tex  top-Color-3.tex  top.tex  top2.tex  top_1.tex  top_2.tex  top_3.tex  top_4.tex  top_5.tex  top_B.tex  top_C.tex  top_D.tex
memo/: 指示書.md
spec/: 指示書_1.md  指示書_2.md  画面サイズ.md
src/: __init__.py  aozora_server.py  aozoratex.py  aozoratex_cli.py  aozoratex_generate.py  api_bridge.py  server_fastapi.py  server_services.py  settings_store.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: DeviceDefaultsEditor.tsx  DevicePreview.tsx  FileSelector.tsx  StepCard.tsx  Terminal.tsx
static/: color-palettes.json  index.html
tests/: test_aozoratex.py  test_layout_settings.py
tools/: LuaLaTeX_CharTest_v4.html  LuaLaTeX_CharTest_v4.txt  LuaLaTeX_フォントカタログ.md  extract_gaiji.py  parse_html.py  sangokushi.tex  test_fb1.tex  tmp_macro_test.tex  文庫本構造と三国志LaTeX組版.md
(+108 files in other folders)
